fix: system onboarding route canonical

--- a/reports/ONBOARDING_AUTO_20260209_094938.md
+++ b/reports/ONBOARDING_AUTO_20260209_094938.md
@@ -55,3 +55,62 @@ COMMIT
 [OK] INDEX WRITTEN
 
 $ git add .
+[OK] GIT ADD
+
+$ git commit -m system: onboarding full auto canonical
+[main 34153e6] system: onboarding full auto canonical
+ 18 files changed, 973 insertions(+), 275 deletions(-)
+ create mode 100644 forensic/balances_at_date.csv
+ create mode 100644 forensic/wallet_replay_2dd7691e-553d-4af3-88f6-4376100f4dfd.csv
+ create mode 100644 masters.id
+ create mode 100644 payments
+ create mode 100644 reports/ONBOARDING_AUTO_20260209_093455.md
+ create mode 100644 reports/ONBOARDING_AUTO_20260209_094257.md
+ create mode 100644 reports/ONBOARDING_AUTO_20260209_094736.md
+ create mode 100644 reports/ONBOARDING_AUTO_20260209_094938.md
+ create mode 100644 routes/system_onboarding_identity.js
+ create mode 100644 sandbox/SANDBOX_REPORT.md
+ create mode 100644 sandbox/sandbox_run.py
+ create mode 100644 sql/audit/readonly_user.sql
+ create mode 100644 sql/booking/2026_02_09_booking_calendar_link.sql
+ create mode 100644 sql/system_onboarding_identity.sql
+ create mode 100644 tools/TOTEM_ONBOARDING_FULL_AUTO.py
+ create mode 100644 tools/TOTEM_ONBOARDING_FULL_AUTO_ONEFILE.py
+[OK] GIT COMMIT
+
+$ git push
+To https://github.com/Vkarich74/totem-p0-api.git
+   54e5c4a..34153e6  main -> main
+[OK] GIT PUSH
+
+$ curl -i -X POST https://totem-p0-api-production.up.railway.app/system/onboarding/identity -H Content-Type: application/json -H X-System-Token: TECH_SYSTEM_TOKEN_TEMP_2026 -d {"lead_id":"auto-20260209_094938","odoo_user_id":"1","email":"a@a","requested_role":"MASTER"}
+HTTP/1.1 404 Not Found
+Content-Length: 166
+Content-Security-Policy: default-src 'none'
+Content-Type: text/html; charset=utf-8
+Date: Mon, 09 Feb 2026 09:50:06 GMT
+Server: railway-edge
+X-Content-Type-Options: nosniff
+X-Powered-By: Express
+X-Railway-Edge: railway/europe-west4-drams3a
+X-Railway-Request-Id: xVXjF4KHS02Ak2F2m3z_FQ
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+<title>Error</title>
+</head>
+<body>
+<pre>Cannot POST /system/onboarding/identity</pre>
+</body>
+</html>
+  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
+                                 Dload  Upload   Total   Spent    Left  Speed
+
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+100   259  100   166  100    93    171     95 --:--:-- --:--:-- --:--:--   269
+100   259  100   166  100    93    171     95 --:--:-- --:--:-- --:--:--   268
+[OK] SMOKE
+[OK] DONE
+REPORT: C:\Users\Vitaly\Desktop\odoo-local\reports\ONBOARDING_AUTO_20260209_094938.md
