payments: provider-agnostic docs pack

--- a/reports/ONBOARDING_AUTO_20260209_095352.md
+++ b/reports/ONBOARDING_AUTO_20260209_095352.md
@@ -46,3 +46,37 @@ psql:C:/Users/Vitaly/Desktop/odoo-local/sql/system_onboarding_identity.sql:12: N
 [OK] INDEX WRITTEN
 
 $ git add .
+[OK] GIT ADD
+
+$ git commit -m fix: system onboarding route canonical
+[main bd1b5ae] fix: system onboarding route canonical
+ 5 files changed, 133 insertions(+), 26 deletions(-)
+ create mode 100644 reports/ONBOARDING_AUTO_20260209_095352.md
+[OK] GIT COMMIT
+
+$ git push
+To https://github.com/Vkarich74/totem-p0-api.git
+   34153e6..bd1b5ae  main -> main
+[OK] GIT PUSH
+
+$ curl -i -X POST https://totem-p0-api-production.up.railway.app/system/onboarding/identity -H Content-Type: application/json -H X-System-Token: TECH_SYSTEM_TOKEN_TEMP_2026 -d {"lead_id":"auto-20260209_095352","odoo_user_id":"1","email":"a@a","requested_role":"MASTER"}
+HTTP/1.1 200 OK
+Content-Length: 60
+Content-Type: application/json; charset=utf-8
+Date: Mon, 09 Feb 2026 09:54:06 GMT
+Etag: W/"3c-Zm/HNUY8lYTivgsyUm0QZBufbGM"
+Server: railway-edge
+X-Powered-By: Express
+X-Railway-Edge: railway/europe-west4-drams3a
+X-Railway-Request-Id: CaQdUbiqSsm7pyMRss7a6g
+
+{"core_user_id":1,"granted_role":"MASTER","state":"PENDING"}
+  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
+                                 Dload  Upload   Total   Spent    Left  Speed
+
+  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0
+100   153  100    60  100    93     56     87  0:00:01  0:00:01 --:--:--   144
+100   153  100    60  100    93     56     87  0:00:01  0:00:01 --:--:--   144
+[OK] SMOKE
+[OK] DONE
+REPORT: C:\Users\Vitaly\Desktop\odoo-local\reports\ONBOARDING_AUTO_20260209_095352.md
